Fix twin-cover lemma

--- a/diapos.tex
+++ b/diapos.tex
@@ -327,7 +327,7 @@
         $\cm(G) \leq 2^{\tc(G)} + \tc(G)$.
     \end{block}
 
-    \textcolor{blue}{Proof:} We create $\tc(G)$ parts, one for each vertex in a twin-cover, and then partition the remaining vertices by their neighborhood type.
+    \textcolor{blue}{Proof:} We create $\tc(G)$ parts, one for each vertex in a twin-cover, and then partition the remaining vertices by their neighborhoods \textbf{in $X$}.
 
     TODO: dibujo de la particion?
 \end{frame}
