Remove redundant \prec

--- a/diapos.tex
+++ b/diapos.tex
@@ -69,7 +69,7 @@
 \begin{frame}{Consistent solution}
     A \emph{consistent solution using $k$ classes} for a graph $G$ is a pair $(\prec, S)$ where 
     \begin{itemize}
-        \item $\prec$ is a strict total order $\prec$ on $V(G)$, and 
+        \item $\prec$ is a strict total order on $V(G)$, and 
         \item $S$ is a partition of $V(G)$ into $k$ classes,
     \end{itemize}
     such that, for each triple of vertices $u\prec v \prec w$ of $G$, if
