Remember to multiply by 2

--- a/diapos.tex
+++ b/diapos.tex
@@ -334,7 +334,7 @@
 
 
 \begin{frame}{Twin-cover}
-    We can again use the same kernelization algorithm to obtain a kernel of size at most $2^{\tc(G)} + \tc(G)$ for \textsc{Thinness} parameterized by the twin-cover number of $G$.
+    We can again use the same kernelization algorithm to obtain a kernel of size at most $2 \cdot (2^{\tc(G)} + \tc(G))$ for \textsc{Thinness} parameterized by the twin-cover number of $G$.
 \end{frame}
 
 \subsection{Vertex cover}
@@ -349,7 +349,7 @@
 
 \begin{frame}{Vertex cover}
     Every vertex cover is a twin-cover.
-    We can use the same kernelization algorithm to obtain a kernel of size at most $2^{\vc(G)} + \vc(G)$ for \textsc{Thinness} parameterized by the vertex cover number of $G$.
+    We can use the same kernelization algorithm to obtain a kernel of size at most $2 \cdot (2^{\vc(G)} + \vc(G))$ for \textsc{Thinness} parameterized by the vertex cover number of $G$.
 \end{frame}
 
 \subsection{Kernelization lower bounds}
